# bwrob.github.io

./: .gitignore  .nojekyll  .pre-commit-config.yaml  README.html  README.md  _quarto.yml  about.qmd  ideas.html  ideas.qmd  index.html  index.qmd  index.xml  listings.json  pyproject.toml  ruff.toml  search.json  sitemap.xml  theme-dark.scss
.quarto/idx/: index.qmd.json
.quarto/xref/: 12f91c0a  1809662a  2945ee4d  4c7b803e  8b19852a  9f746763  INDEX  a102033f  b45b0e7c  b6badd72  bbf22099  c1004b58  c31aa3d6  fac864af
_site/: index.xml  robots.txt
_site/pages/: teaching.html
blog/: about.html  index.html  search.json
courses/: pwr-intro-to-cs-2024.html
docs/: about.html  hobbies.html  ideas.html  index-listing.json  index.feed-full-staged  index.html  index.xml  listings.json  resume.html  search.json  sitemap.xml
docs/pages/: about.html  about_test.html  hobbies.html  resume.html
pages/: _metadata.yml  about.qmd  hobbies.html  hobbies.qmd  resume.html  resume.qmd  tab_test.html  tab_test.ipynb  tab_test.qmd  teaching.html  teaching.qmd
pages/courses/: lista_3_dla_zaawansowanych.html  lista_3_dla_zaawansowanych.qmd  pwr-intro-to-cs-2024.html  pwr-intro-to-cs-2024.qmd  pwr-programming-2025-dual.html  pwr-programming-2025-dual.qmd  pwr-programming-2025-env.html  pwr-programming-2025-env.qmd  pwr-programming-2025-functions.html  pwr-programming-2025-functions.qmd  pwr-programming-2025-game-of-life.html  pwr-programming-2025-game-of-life.qmd  pwr-programming-2025-leetcode.html  pwr-programming-2025-leetcode.qmd  pwr-programming-2025-list-comments copy.html  pwr-programming-2025-list-comments.html  pwr-programming-2025-list-comments.qmd  pwr-programming-2025-log.html  pwr-programming-2025-log.qmd  pwr-programming-2025-project-part.html  pwr-programming-2025-project-part.qmd  pwr-programming-2025-pythonw.html  pwr-programming-2025-pythonw.qmd  pwr-programming-2025-ruff.html  pwr-programming-2025-ruff.qmd  pwr-programming-2025.html  pwr-programming-2025.qmd  uw-analysis-2016.html  uw-analysis-2016.qmd  uw-analysis-2017.html  uw-analysis-2017.qmd  uwr-nonlinear-fa-2016.qmd  uwr-nonlinear-fa-2017.html  uwr-nonlinear-fa-2017.qmd  uwr-odes-1-2018.html  uwr-odes-1-2018.qmd  uwr-odes-1a-2017.html  uwr-odes-1a-2017.qmd  uwr-odes-1r-2018.html  uwr-odes-1r-2018.qmd
pages/notebooks/: cd_projekt_red.html  cd_projekt_red.ipynb  mandebrot.html  mandebrot.ipynb
posts/: _metadata.yml
posts/000000_draft/: index.html  index.qmd
posts/000001_pydantic_data_model/: index.qmd
posts/000002_quarto_personal_blog/: index.html  index.qmd
posts/000003_deming_principles/: index.html  index.qmd
posts/000004_exit_stack/: index.qmd
posts/000004_startup_script/: index.html  index.qmd  startup_script.py
posts/000005_linux_in_windows/: index.html  index.md
posts/240426_strategy_integration/: index.html  index.qmd  integration.py
posts/240426_test_post_with_code/: index.qmd
posts/240426_welcome/: index.html  index.qmd
posts/240428_pydantic_data_model/: index.qmd
posts/240430_quarto_personal_blog/: index.qmd
posts/240512_exit_stack/: exit_stack.py  index.html  index.qmd
posts/280426_strategy_integration/: index.qmd
posts/exit-stack/: index.html  index.qmd
posts/exit_stack/: index.html  index.qmd
posts/linux-in-windows/: index.html  index.qmd
posts/linux-python-dev-env/: index.html  index.qmd
posts/linux_in_windows/: index.html  index.qmd
posts/linux_python_dev_env/: index.qmd
posts/linux_shell_setup/: index.html  index.qmd
posts/mathematician-in-finance/: index.html  index.qmd
posts/post-with-code/: index.qmd
posts/protocol-typing-dataclass/: index.qmd
posts/readme-driven-dev/: index.qmd
posts/sgh-investment-banking/: index.html  index.qmd
posts/sgh-investment-funds/: index.html
posts/sgh-risk-management/: index.html
posts/sgh-wealth-management/: index.html
posts/startup-script/: index.html  index.qmd
posts/startup_script/: Startup!.lnk  index.html  index.qmd  startup_script.py
posts/strategy-pattern-integration/: index.html  index.qmd
posts/strategy_pattern_integration/: index.html  index.qmd
posts/welcome/: index.html  (+1 more)
scripts/: exit_stack.py  field_based_protocol.py  integration.py  startup_script.py  wsl_setup.sh
(+85 files in other folders)
