[tool.poetry]
    name        = "bwrob-github-io"
    version     = "0.1.0"
    description = ""
    authors     = ["bwrob <bw2002@wp.pl>"]
    readme      = "README.md"
    packages    = [{ include = "scripts" }]

[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

    [tool.poetry.dependencies]
        python = "^3.12"

        plotly       = "^6.0.1"
        matplotlib   = "^3.10.1"
        mplfinance   = "^0.12.10b0"
        pandas       = "^2.2.3"
        pandas-stubs = "^2.2.3.250308"
        scipy        = "^1.15.2"
        sympy        = "^1.13.3"
        yfinance     = "^0.2.55"

    [tool.poetry.group.dev.dependencies]
        basedpyright = "^1.28.4"
        hapless      = "^0.7.1"
        ipython      = "^9.0.2"
        jupyter      = "^1.1.1"
        poethepoet   = "^0.33.1"
        pre-commit   = "^4.2.0"
        pyright      = "^1.1.398"
        ruff         = "^0.11.2"

[tool.ruff]
    include        = ["scripts/*.ipynb", "scripts/*.py"]
    line-length    = 88
    target-version = "py312"

    [tool.ruff.lint]
        select = ["ALL"]
        ignore = [
            "COM819",
            "D203",
            "D211",
            "D213",
            "FA102",
            "ISC001",
        ]

    [tool.ruff.format]
        docstring-code-format = true


[tool.poe.tasks]

    _report_host = "echo 'http://localhost:3333/'"
    _hap_preview = "hap run quarto preview ./index.qmd --port 3333 --quiet"
    preview      = ["_hap_preview", "_report_host"]
