[tool.poetry]
    name         = "bwrob-github-io"
    version      = "0.1.0"
    description  = ""
    authors      = ["bwrob <bw2002@wp.pl>"]
    readme       = "README.md"
    package-mode = false


    [tool.poetry.dependencies]
        python = "^3.13"

        plotly       = "^6.1.2"
        matplotlib   = "^3.10.3"
        pandas       = "^2.2.3"
        pandas-stubs = "^2.2.3.250527"
        scipy        = "^1.15.3"
        sympy        = "^1.14.0"
        pygame       = "^2.6.1"
        rich         = "^14.0.0"

    [tool.poetry.group.dev.dependencies]
        ipython = "^9.3.0"
        jupyter = "^1.1.1"

[tool.poe.tasks]

    _report_host = "echo 'http://localhost:3333/'"
    _hap_preview = "hap run quarto preview ./index.qmd --port 3333 --quiet"
    _fix         = "ruff check --fix --unsafe-fixes --config ruff.toml ."
    _format      = "ruff format --config ruff.toml ."

    install-dev-tools = "pipx install --force argcomplete ruff hapless poethepoet poetry pre-commit uv pytest basedpyright"
    upgrade-dev-tools = "pipx upgrade-all --force"
    preview           = ["_hap_preview", "_report_host"]
    publish           = "hap run quarto publish --no-prompt --no-browser --quiet  gh-pages"
    check             = ["_fix", "_format"]
